Revert "WindowManager: Prevent iOS Safari from scrolling the page behind the dialog"
The iOS hack causes the scroll position on the page to be reset to the
top when opening the dialog (and never restored). This needs more thought.

This reverts commit e460dc61523e49aa01eea8c75c252948de0cc295.

Bug: T212159

--- a/src/styles/WindowManager.less
+++ b/src/styles/WindowManager.less
@@ -35,15 +35,10 @@
 		bottom: 0;
 	}
 
-	// This class is applied to the <html> and <body> elements
+	// This class is applied to the <body> element
 	&-modal-active {
 		// Prevent the page behind the dialog from being scrolled (and remove the scrollbar)
 		overflow: hidden;
-		// Needed for iOS Safari to actually prevent it from scrolling the page
-		height: 100%;
-	}
-
-	body&-modal-active {
 		// Prevent positioned content from shifting when the scrollbar is removed (T208436):
 		// this works together with the `margin-right` added by WindowManager#toggleGlobalEvents
 		position: relative;
